文件管理与气象字段更新